Adding filter api to accounts
