# app/Models/UserAccount.php
@@ -2,8 +2,9 @@
 
 namespace App\Models;
 
-use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
 
 class UserAccount extends Model
 {
@@ -22,4 +23,14 @@ class UserAccount extends Model
         'user_id',
         'account_id',
     ];
+
+    public function users(): BelongsTo 
+    {
+        return $this->belongsTo(User::class, 'user_id');
+    }
+
+    public function accounts(): BelongsTo 
+    {
+        return $this->belongsTo(Account::class, 'account_id');
+    }
 }
